# Collision-Avoidance-Framework

./: .env.example  .gitignore  README.md  clearLogs.py  filterFrames.py  main.py  processFrames.py  pyproject.toml
src/: EgoController.py  clearLogs.py  createFrameWindows.py  embeddingLayer.py  extractData.py  filterFrames.py  main.py  model.py  preprocessData.py
